--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,14 +1,13 @@
-server:
-  port: 8080
-  servlet:
-    context-path: /identity
-
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/my_web"
-    username: root
-    password: 123456
+    url: jdbc:mysql://us-cluster-east-01.k8s.cleardb.net/heroku_579adff8c5844de?reconnect=true
+    username: b15024aa3acf96
+    password: 38503ab8
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate.format_sql: true
