--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,14 +1,3 @@
-server:
-  port: 8080
-  servlet:
-    context-path: /identity
-
 spring:
-  datasource:
-    url: "jdbc:mysql://localhost:3306/my_web"
-    username: root
-    password: 123456
-
-  jpa:
-    hibernate:
-      ddl-auto: update
+  profiles:
+    active: heroku
