--- a/src/main/resources/application-heroku.yaml
+++ b/src/main/resources/application-heroku.yaml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 10
-      minimum-idle: 5hẻ
+      minimum-idle: 5
       idle-timeout: 30000
       max-lifetime: 1800000
       connection-timeout: 30000
