--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,22 +1,14 @@
+server:
+  port: 8080
+  servlet:
+    context-path: /identity
+
 spring:
   datasource:
     url: "jdbc:mysql://bqmayq5x95g1sgr9.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dhvb5jajzm106gw6"
     username: nyhufdmq8i2gt0hn
     password: xqicb64jip3por7s
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      maximum-pool-size: 10
-      minimum-idle: 5
-      idle-timeout: 30000
-      max-lifetime: 1800000
-      connection-timeout: 30000
-  security:
-    enabled: false
 
   jpa:
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        jdbc:
-          time_zone: UTC
