--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,19 @@ spring:
     url: "jdbc:mysql://bqmayq5x95g1sgr9.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dhvb5jajzm106gw6"
     username: nyhufdmq8i2gt0hn
     password: xqicb64jip3por7s
+    hikari:
+      maximum-pool-size: 10        # Giới hạn số kết nối tối đa
+      idle-timeout: 600000         # Thời gian tối đa (ms) giữ kết nối không hoạt động (ở đây là 10 phút)
+      max-lifetime: 1800000        # Thời gian tối đa sống của một kết nối (ở đây là 30 phút)
+      connection-timeout: 30000    # Thời gian tối đa để chờ kết nối mới
+      validation-timeout: 5000     # Thời gian tối đa để kiểm tra kết nối
+      leak-detection-threshold: 15000 # Thời gian phát hiện rò rỉ kết nối (ở đây là 15 giây)
 
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: true
