--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,11 +5,11 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://bqmayq5x95g1sgr9.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dhvb5jajzm106gw6"
-    username: nyhufdmq8i2gt0hn
-    password: xqicb64jip3por7s
+    url: "jdbc:mysql://uc13jynhmkss3nve.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ir2cwolruuxt7fpe"
+    username: r1ry27uhddk7fzmp
+    password: j3x0mrxtdhscvv9s
     hikari:
-      maximum-pool-size: 10        # Giới hạn số kết nối tối đa
+      maximum-pool-size: 9        # Giới hạn số kết nối tối đa
       idle-timeout: 600000         # Thời gian tối đa (ms) giữ kết nối không hoạt động (ở đây là 10 phút)
       max-lifetime: 1800000        # Thời gian tối đa sống của một kết nối (ở đây là 30 phút)
       connection-timeout: 30000    # Thời gian tối đa để chờ kết nối mới
