--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,13 @@ spring:
     url: mysql://ntqdah1h2dlb5ycj:k2cv83xur4jtbn3h@a07yd3a6okcidwap.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/crimcvkgbiw65pj6
     username: ntqdah1h2dlb5ycj
     password: k2cv83xur4jtbn3h
+
+    #Chạy local
+#    url: jdbc:mysql://localhost:3306/customer
+#    username: root
+#    password: 123456
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+
     hikari:
       maximum-pool-size: 9        # Giới hạn số kết nối tối đa
       idle-timeout: 600000         # Thời gian tối đa (ms) giữ kết nối không hoạt động (ở đây là 10 phút)
@@ -22,6 +29,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
+        #dialect: org.hibernate.dialect.MySQL8Dialect
         jdbc:
           lob:
             non_contextual_creation: true
