--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<tag/>
 		<url/>
 	</scm>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -83,6 +83,14 @@
 					<source>11</source>
 					<target>11</target>
 				</configuration>
+			</plugin>
+			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>3.2.5</version>
+			<configuration>
+				<skipTests>true</skipTests>
+			</configuration>
 			</plugin>
 		</plugins>
 	</build>
