--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,8 +5,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
-         ?useSSL=false&allowPublicKeyRetrieval=true
+    # Lấy thẳng từ MYSQL_PUBLIC_URL, thêm prefix jdbc:
+    url: jdbc:${MYSQL_PUBLIC_URL}
     username: ${MYSQLUSER}
     password: ${MYSQLPASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
